--- a/my_app/templates/home.html
+++ b/my_app/templates/home.html
@@ -20,7 +20,7 @@
                     <div class="quote">
                     <h5 >Live life as though nobody is watching, and express yourself as though everyone is listening.
                     </h5>
-                    <h5>-Nelson Mandela</h5>
+                    <h5>-<a href="{%url 'test'%}">Nelson Mandela</a></h5>
                     </div>
                   </div>
 
