--- a/my_app/templates/home_login.html
+++ b/my_app/templates/home_login.html
@@ -3,79 +3,106 @@
 
 
 {%block content%}
+
 <link rel="stylesheet" href="/static/css/style.css">
 <script type="text/javascript" src="{% static 'like.js' %}"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <div class="container all-posts ">
-            {%for post in post%}
-            <ul class="collection">
-              <li class="collection-item avatar">
-                <img src="{{ post.user.profile.image.url }}" alt="" class="circle post-image">
-                <span class="title"><a href="{% url 'post_detail' post.id %}"><h5>{{post.title}}</h5></a></span>
-                <p class="date">{{post.date}}</p>
-                <p class="content">{{post.content}}</p>
-                  <a id='like-button' class="secondary-content">
-                      <i class="material-icons thumb_up_liked" id="thumb_up" data-id={{post.id}}>thumb_up</i> 
-                      <p class="likes-count" id="likes-count"> {{post.likes.count}} votes</p>
-                  </a>
-                    {%if user == post.user%}
-                      <form action="{%url 'post_delete' post.id %}" method="POST">
-                        {%csrf_token%}
-                        <button type="submit" class="delete-button"><i class=" small delete material-icons">delete</i></button>
-                      </form>
-                    {%endif%}
-                  </li>
-            </ul>          
-            {%endfor%}
-      
+{%for post in post%}
+
+  <ul class="collection">
+    <li class="collection-item avatar">
+      <img src="{{ post.user.profile.image.url }}" alt="" class="circle post-image">
+      <span class="title"><a href="{% url 'post_detail' post.id %}"><h5>{{post.title}}</h5></a></span>
+      <p class="date">{{post.date}}</p>
+      <p class="content">{{post.content}}</p>
+        <a id='like-button' class="secondary-content">
+          <i class="material-icons" id="thumb_up" data-id={{post.id}}>thumb_up</i> 
+          <p class="likes-count" id="likes-count"> {{post.likes.count}} votes</p>
+        </a>
+          {%if user == post.user%}
+           <form action="{%url 'post_delete' post.id %}" method="POST">
+             {%csrf_token%}
+             <button type="submit" class="delete-button"><i class=" small delete material-icons">delete</i></button>
+           </form>
+          {%endif%}
+    </li>
+  </ul>    
+
+{%endfor%}      
     
 {%if is_paginated%}
-<ul class="pagination container-fluid" align="center">
-            
-              {%if page_obj.has_previous%}
-              <li class="waves-effect active"><a class=" blue lighten-1 " href="?page={{page_obj.previous_page_number}}"><i class="material-icons chevron_right">chevron_left</i></a></li>        
-              <li class="waves-effect"><a  href="?page=1">First</a></li>
-                      
-              {%endif%}
-              {% for num in page_obj.paginator.page_range %}
-                {%if page_obj.number == num %}
-                <li class="active  blue lighten-1">
-                <a href="?page={{num}}"" class="waves-effect waves-light">{{num}}</a></li>
-                {%elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2'%}
-                <li class="waves-effect"><a href="?page={{num}}">{{num}}</a></li>
-                {%endif%}
-              {%endfor%}
-              {%if page_obj.has_next%}
-              <li class="waves-effect"><a href="#!">Last</a></li> 
-              <li class="waves-effect active"><a class=" blue lighten-1 " href="?page={{page_obj.next_page_number}}"><i class="material-icons chevron_right">chevron_right</i></a></li>
-              {%endif%}
+<ul class="pagination container-fluid" align="center">          
+  {%if page_obj.has_previous%}
+    <li class="waves-effect active"><a class=" blue lighten-1 " href="?page={{page_obj.previous_page_number}}"><i class="material-icons chevron_right">chevron_left</i></a></li>        
+    <li class="waves-effect"><a href="?page=1">First</a></li>         
+  {%endif%}
+    {% for num in page_obj.paginator.page_range %}
+      {%if page_obj.number == num %}
+      <li class="active blue lighten-1">
+      <a href="?page={{num}}"" class="waves-effect waves-light">{{num}}</a></li>
+      {%elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2'%}
+      <li class="waves-effect"><a href="?page={{num}}">{{num}}</a></li>
+      {%endif%}
+    {%endfor%}
+      {%if page_obj.has_next%}
+      <li class="waves-effect"><a   href="#!">Last</a></li> 
+      <li class="waves-effect active"><a class=" blue lighten-1 " href="?page={{page_obj.next_page_number}}"><i class="material-icons chevron_right">chevron_right</i></a></li>
+      {%endif%}
 </ul>
-            {%endif%}
-          
-            
-          </br>
+{%endif%}
+</br>
 </div>
 
 <script>
+
 window.onload = function(){
+
+  const all_likes = document.querySelectorAll('#thumb_up');
+  
+  var xml = new XMLHttpRequest();
+  let baseurl = 'http://localhost:8000/test';
+  xml.onreadystatechange = function(){
+    if(this.readyState===4 && this.status==200){
+      data = JSON.parse(xml.responseText);
+      let tmp_arr = data[0].liked_posts; //django
+      for(let i of all_likes){
+        local_id = i.getAttribute('data-id');
+        local_id = parseInt(local_id);
+        console.log('local_id', local_id);
+        console.log('tmp_arr', tmp_arr );
+        if (tmp_arr.includes(local_id) == true ){
+          i.className = 'material-icons thumb_up_liked';
+        } else {
+          i.className = 'material-icons thumb_up';
+        }
+      };
+    };
+  };
+       
+  xml.open('GET', baseurl, true);
+  xml.send(); 
+
+  var all_posts = document.getElementsByClassName('like-button');
   var thumb_up = document.getElementById('thumb_up');
   thumb_up.style.cursor = 'pointer';
   thumb_up.onclick = function(){
     var req = new XMLHttpRequest();
     var id = this.getAttribute('data-id');
-    var url = 'http://localhost:8000/api/like/'+id+'?format=json';
+    var url = '/api/like/'+id+'?format=json';
     req.onreadystatechange = function(){
       if(this.readyState==4 && this.status==200){
         // var data = eval(req.responseText);
         data = JSON.parse(req.responseText);
         var likes = data.likes;
         document.getElementById('likes-count').innerHTML = likes+' votes';
-        // //changing color
-        // if(data.liked=='true'){
-        //   thumb_up.className = "material-icons thumb_up_liked";
-        // } else{
-        //   thumb_up.className = "material-icons thumb_up";
-        // }
+        //changing color
+        if(data.liked=='true'){
+          thumb_up.className = "material-icons thumb_up_liked";
+        }
+        if(data.liked=='false'){
+          thumb_up.className = "material-icons thumb_up";
+        }
       }
     };
     req.open("GET", url, true);
@@ -83,6 +110,4 @@ window.onload = function(){
   }
 }
 </script>
-
-
 {%endblock%}
